--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv-load": "^2.0.0",
     "final-form": "^4.20.2",
     "final-form-material-ui": "^0.3.0",
+    "isomorphic-unfetch": "^3.1.0",
     "moment": "2.24.0",
     "next": "9.3.6",
     "next-compose-plugins": "2.2.0",
