--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "final-form": "^4.20.2",
     "final-form-material-ui": "^0.3.0",
     "moment": "2.24.0",
-    "next": "9.3.6",
+    "next": "^9.5.5",
     "next-compose-plugins": "2.2.0",
     "next-env": "^1.1.1",
     "next-images": "^1.3.1",
